# cmake_sublime-subilme_build

./: CMakeLists.txt  LSP.sublime-settings  README.md  build.sh
